--- a/Marvel/css/style.css
+++ b/Marvel/css/style.css
@@ -23,5 +23,36 @@ body {
 
   #header #icon {
     max-width: 20px;
+    margin-top: 5%;
   }
+
+ul #icon{
+  position:relative;
+  display:inline-block;
+  margin:2rem 1rem;
+  max-width: 15%;
+  border-radius:5px;
+  box-shadow:0 1px 2px 0 rgba(0,0,0,0.1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+ul #icon:after{
+  content:"";
+  position:absolute;
+  width:100%;
+  height:100%;
+  opacity:0;
+  border-radius:5px;
+  box-shadow:0 5px 15px 0 rgba(0,0,0,0.3);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  z-index: -1;
+}
+
+ul #icon:hover{
+  transform:scale(1.55,1.55);
+}
+
+ul #icon:hover::after{
+  opacity:1;
+}
   
