--- a/Marvel/css/style.css
+++ b/Marvel/css/style.css
@@ -9,7 +9,7 @@ body {
   background-size: cover;
 }
 
-#header {
+/* #header {
     background: rgba(0, 0, 0, 0.836);
     transition: all 0.5s;
     z-index: 997;
@@ -55,4 +55,93 @@ ul #icon:hover{
 ul #icon:hover::after{
   opacity:1;
 }
+
+ul #header #listheader{
+  color: white;  
+} */
+
+#header{
+  width: 100%;
+  height: 12%;
+  background-color: rgb(0, 0, 0);
+  position: fixed;
+  display: flex;
+  align-items: center;
+  z-index: 1;
+}
+
+#logo{
+  width: 10%;
+  text-align: center;
+  margin-left: 10%;
+}
+
+#header i{
+  cursor: pointer;
+  background-color: white ;
+}
+
+#opcoes ul{
+  display: none;
+  justify-content: space-between;
+  font-size: 1.2rem;
+  transition: 2s;
+}
+
+#opcoes li{
+  display: flex;
+  margin: 10px;
+  cursor: pointer;
+
+}
+
+#opcoes a{
+  text-decoration: none;
+  color: white;
+  transition: 0.50s;
+}
+
+
+#opcoes a:hover{
+  color: #ffffff;
+}
+
+#inicio{
+  text-align: center;
+  width: 100%;
+  position: relative;
+  user-select: none;
+}
+
+#inicio img{
+  width: 100%;
+  border-bottom: 2px solid #ee2027;
+}
+
+#inicio #divTitulo{
+  margin: auto;
+  margin-top: 23%;
+  width: 100%;
+  position: absolute;
+}
+
+#inicio h1{
+  font-size: 5em;
+  margin-left: 8%;
+  color: #ee2027;
+  cursor: pointer;
+}
+#inicio p{
+  margin-top: 2%;
+  margin-left: 5%;
+  font-size: 1.2em;
+}
+
+#inicio span{
+  border-top: 10px solid rgb(25, 25, 25);
+  border-bottom: 10px solid rgb(25, 25, 25);
+  color: #ffffff;
+}
+
+
   
