--- a/Marvel/css/style.css
+++ b/Marvel/css/style.css
@@ -1,38 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 html, body {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
 }
-body {
-  background: linear-gradient(to right top, #610a0a, #9d0a0a, #610a0a);  
-  background-size: cover;
-}
 
-/* #header {
+ #header {
     background: rgba(0, 0, 0, 0.836);
     transition: all 0.5s;
     z-index: 997;
     height: 80px;
   }
 
-  #header #logo {
-    max-width: 15%;
-    margin-left: 20%;
-  }
-
   #header #icon {
     max-width: 20px;
     margin-top: 5%;
   }
-
-ul #icon{
+  
+ul #icon {
   position:relative;
-  display:inline-block;
-  margin:2rem 1rem;
+  display: ;
+  justify-content: space-between;
+  margin:1rem 2rem;
   max-width: 15%;
   border-radius:5px;
-  box-shadow:0 1px 2px 0 rgba(0,0,0,0.1);
+  box-shadow:0 1px 2px 0 rgba(255, 255, 255, 0.1);
   transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
@@ -45,20 +39,24 @@ ul #icon:after{
   border-radius:5px;
   box-shadow:0 5px 15px 0 rgba(0,0,0,0.3);
   transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-  z-index: -1;
+  z-index: -2;
 }
 
 ul #icon:hover{
   transform:scale(1.55,1.55);
+  transition: 1s;
 }
 
 ul #icon:hover::after{
   opacity:1;
 }
-
-ul #header #listheader{
-  color: white;  
-} */
+ 
+#icon li{
+  display: inline;
+  margin: 10px;
+  cursor: pointer;
+  position: relative;
+}
 
 #header{
   width: 100%;
@@ -73,75 +71,57 @@ ul #header #listheader{
 #logo{
   width: 10%;
   text-align: center;
-  margin-left: 10%;
+  margin-left: 8%;
 }
 
-#header i{
+/* 
+#listheader a{
+  color: rgb(255, 255, 255);
+  font-family: 'Bebas Neue', sans-serif;
+  font-size: 120%;
+  position: relative;
+  transition: 2s;
   cursor: pointer;
-  background-color: white ;
-}
+  text-decoration: none;
 
-#opcoes ul{
+} */
+
+#listheader ul{
   display: none;
   justify-content: space-between;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   transition: 2s;
-}
+} 
 
-#opcoes li{
-  display: flex;
+#listheader li{
+  display: inline;
   margin: 10px;
   cursor: pointer;
-
+  position: relative;
 }
 
-#opcoes a{
+#listheader a{
   text-decoration: none;
   color: white;
   transition: 0.50s;
+  font-family: 'Bebas Neue', sans-serif;
 }
 
-
-#opcoes a:hover{
-  color: #ffffff;
-}
-
-#inicio{
-  text-align: center;
-  width: 100%;
-  position: relative;
-  user-select: none;
-}
-
-#inicio img{
-  width: 100%;
-  border-bottom: 2px solid #ee2027;
-}
-
-#inicio #divTitulo{
-  margin: auto;
-  margin-top: 23%;
-  width: 100%;
-  position: absolute;
-}
-
-#inicio h1{
-  font-size: 5em;
-  margin-left: 8%;
+#listheader a:hover{
   color: #ee2027;
-  cursor: pointer;
-}
-#inicio p{
-  margin-top: 2%;
-  margin-left: 5%;
-  font-size: 1.2em;
 }
 
-#inicio span{
-  border-top: 10px solid rgb(25, 25, 25);
-  border-bottom: 10px solid rgb(25, 25, 25);
-  color: #ffffff;
+.carousel-inner > .carousel-item > img {
+  height: 700px;
 }
 
+h1{
+  font-family: 'Bebas Neue', sans-serif;
+  text-align: center;
+  margin-top: 5%;
+  margin-bottom: -5%;
+}
 
-  
+.cards-personagens{
+  margin: 10%;
+}
