--- a/Marvel/css/style.css
+++ b/Marvel/css/style.css
@@ -112,7 +112,8 @@ ul #icon:hover::after{
 }
 
 .carousel-inner > .carousel-item > img {
-  height: 700px;
+  height: 800px;
+  border-bottom: 5px black;
 }
 
 h1{
@@ -124,4 +125,8 @@ h1{
 
 .cards-personagens{
   margin: 10%;
+}
+
+#logo-carousel{
+
 }
